--- a/index.html
+++ b/index.html
@@ -9,30 +9,52 @@
 <body>
     <div class="header">
         <div class="header-logo">Header Logo</div>
-        <div class="header-link">
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
+        <div class="header-link second-text">
+            <div>header link one</div>
+            <div>header link two</div>
+            <div>header link three</div>
         </div>
     </div>
-    <h2>This website is awesome</h2>
-    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-    <p>Sign up</p>
-    <p>this is a placeholder for an image</p>
-    <h2>Some random information.</h2>
-    <ul>
-        <li>this is some subtext under an illustration or image</li>
-        <li>this is some subtext under an illustration or image</li>
-        <li>this is some subtext under an illustration or image</li>
-        <li>this is some subtext under an illustration or image</li>
-    </ul>
-    <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-    <p>-Thor, God of Thunder</p>
-    <h3>Call to action! It's time!</h3>
-    <p>Sign up for our product by clicking that button right over there!</p>
-    <p>Sign up</p>
+    <div class="hero">
+        <div class="hero-left">
+            <div class="main-text">This website is awesome</div>
+            <div class="second-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button class="button">Sign up</button>
+        </div>
+        <div class="hero-right second-text">this is a placeholder for an image</div>
+    </div>
+    <div class="info">
+        <div class="title">Some random information.</div>
+        <div class="info-flex">
+            <div class="first">
+                <div class="empty"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="second">
+                <div class="empty"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="third">
+                <div class="empty"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="fourth">
+                <div class="empty"></div>
+                <div class="info-text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
+    <div class="quote">
+        <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="quote-by">-Thor, God of Thunder</div>
+    </div>
+    <div class="action">
+        <div class="action-left">
+            <div class="action-bold">Call to action! It's time!</div>
+            <div  class="action-text">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button class="button action-right">Sign up</button>
+    </div>
     <div class="footer">Copyright &copy; The Odin Project 2021</div>
 </body>
 </html>
